--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,16 +23,13 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-	    <img src="{{ site.github.repository_url }}/assets/main/banner.png" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" />
+	    <img src="{{ site.baseurl }}/assets/main/banner.png" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" />
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 	    
-	{% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      {% endif %}
-      {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-      {% endif %}
+        <a href="{{ site.github.repository_url }}" class="btn">Home</a>
+        <a href="{{ site.github.repository_url }}/archive" class="btn">Archive</a>
+        <a href="{{ site.github.repository_url }}/about" class="btn">About</a>
+
     </header>
 
     <main id="content" class="main-content" role="main">
