--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <body>
 
     <header class="page-header" role="banner">
-      <img class="banner-img"/>
+      <div class="banner-img"/>
       <h2 class="project-tagline">Calia Nova</h2>
         
       <a href="{{ site.baseurl }}" class="btn">Home</a>
