--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
   <body>
 
     <header class="page-header" role="banner">
-      <div class="banner-img"/>
-      <h2 class="project-tagline">Calia Nova</h2>
+      <img src="/assets/main/banner.png" alt="banner" width="100%" height="100%">
+      <h2 class="project-tagline" >Calia Nova</h2>
         
       <a href="{{ site.baseurl }}" class="btn">Home</a>
       <a href="{{ site.baseurl }}/archive" class="btn">Archive</a>
