--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,12 +22,13 @@
   <body>
 
     <header class="page-header" role="banner">
-      <img src="/assets/main/banner.png" alt="banner" width="100%" height="100%">
+      <img src="{{ site.baseurl }}/assets/main/banner.png" alt="banner" width="100%" height="100%">
       <h2 class="project-tagline" >Calia Nova</h2>
         
       <a href="{{ site.baseurl }}" class="btn">Home</a>
       <a href="{{ site.baseurl }}/archive" class="btn">Archive</a>
       <a href="{{ site.baseurl }}/about" class="btn">About</a>
+      <a href="{{ site.baseurl }}/links" class="btn">Links</a>
 
     </header>
 
