--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,7 @@
   <body>
 
     <header class="page-header" role="banner">
-      <img src="{{ site.baseurl }}/assets/main/banner.png" alt="banner" width="100%" height="100%">
-      <h2 class="project-tagline" >Calia Nova</h2>
+      <img src="{{ site.baseurl }}/assets/main/banner.png" alt="banner-img"/>
         
       <a href="{{ site.baseurl }}" class="btn">Home</a>
       <a href="{{ site.baseurl }}/archive" class="btn">Archive</a>
