--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -111,6 +111,11 @@ a {
   text-align: center;
   background-color: $header-bg-color;
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 
   @include large {
     padding: 5rem 6rem;
@@ -123,6 +128,12 @@ a {
   @include small {
     padding: 2rem 1rem;
   }
+}
+
+.page-header img {
+  flex-shrink: 0;
+  min-width: 100%;
+  min-height: 100%
 }
 
 .project-name {
