--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,9 +8,9 @@ $header-bg-color: #FFEBF9   !default;
 $header-bg-color-secondary: #8F0064 !default;
 
 // Text
-$section-headings-color: #159957 !default;
+$section-headings-color: #680049 !default;
 $body-text-color: #606c71 !default;
-$body-link-color: #1e6bb8 !default;
+$body-link-color: #731eb8 !default;
 $blockquote-text-color: #819198 !default;
 
 // Code
