--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -111,10 +111,8 @@ a {
   text-align: center;
   background-color: $header-bg-color;
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
-  
+
   display: flex;
-  justify-content: center;
-  align-items: center;
   overflow: hidden;
 
   @include large {
@@ -388,3 +386,7 @@ a {
 .site-footer-credits {
   color: $blockquote-text-color;
 }
+
+
+
+// Page buttons
