--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,14 @@
   <body>
     <header class="page-header" role="banner">    
       <img src="{{ site.baseurl }}/assets/main/banner.png" alt="banner-img"/>
-      <a href="{{ site.baseurl }}" class="btn">Home</a>
-      <a href="{{ site.baseurl }}/archive" class="btn">Archive</a>
-      <a href="{{ site.baseurl }}/about" class="btn">About</a>
-      <a href="{{ site.baseurl }}/links" class="btn">Links</a>
+
+      <div name="buttons">
+        <a href="{{ site.baseurl }}" class="btn">Home</a>
+        <a href="{{ site.baseurl }}/archive" class="btn">Archive</a>
+        <a href="{{ site.baseurl }}/about" class="btn">About</a>
+        <a href="{{ site.baseurl }}/links" class="btn">Links</a>
+      </div>
+
     </header>
 
     <main id="content" class="main-content" role="main">
