add chapter layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <header class="page-header" role="banner">    
       <img src="{{ site.baseurl }}/assets/main/banner.png" alt="banner-img"/>
 
-      <div name="buttons">
+      <div class="button-content" name="buttons">
         <a href="{{ site.baseurl }}" class="btn">Home</a>
         <a href="{{ site.baseurl }}/archive" class="btn">Archive</a>
         <a href="{{ site.baseurl }}/about" class="btn">About</a>
