--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -112,9 +112,6 @@ a {
   background-color: $header-bg-color;
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
 
-  position: relative;
-  overflow: hidden;
-
   @include large {
     padding: 5rem 6rem;
   }
@@ -133,9 +130,8 @@ a {
 }
 
 .page-header img {
-  flex-shrink: 0;
-  min-width: 100%;
-  min-height: 100%
+  width: 100%;
+  height: 100%
 }
 
 .project-name {
