--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -1,5 +1,5 @@
 {% for image in site.static_files %}
     {% if image.path contains include.chapter_folder %}
-        <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
+        ![image](image.path)
     {% endif %}
 {% endfor %}
