--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -7,6 +7,10 @@ $header-heading-color: #fff !default;
 $header-bg-color: #FFEBF9   !default;
 $header-bg-color-secondary: #8F0064 !default;
 
+// Chapter
+$chapter-color: #2e3892 !default;
+$chapter-color-secondary: #969ee9 !default;
+
 // Text
 $section-headings-color: #680049 !default;
 $body-text-color: #606c71 !default;
