--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
       </script>
     {% endif %}
     <meta charset="UTF-8">
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/particles.js"></script>
 
 {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +23,7 @@
   </head>
   <body>
     <header class="page-header" role="banner">    
-      <img src="{{ site.baseurl }}/assets/main/banner.png" alt="banner-img"/>
+      <img src="{{ site.baseurl }}/assets/main/logo.png" alt="banner-img"/>
 
       <div class="button-content" name="buttons">
         <a href="{{ site.baseurl }}" class="btn">Home</a>
