--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -402,6 +402,12 @@ a {
     background-color: $hr-border-color;
     border: 0;
   }
+
+
+  .comic-strip {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .site-footer {
@@ -433,4 +439,3 @@ a {
 
 
 
-// Page buttons
