--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -1,10 +1,11 @@
-
+<div class="comic-strip">
 {% for image in site.static_files %}
-    {% if image.path contains include.chapter_folder %}
-        <img
-        src="{{ site.baseurl }}{{ image.path }}"
-        alt="{{ image.id }}"
-        >
-    {% endif %}
+{% if image.path contains include.chapter_folder %}
+    <img
+    src="{{ site.baseurl }}{{ image.path }}"
+    alt="{{ image.id }}"
+    >
+{% endif %}
 {% endfor %}
+</div>
 
