change logo size

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-    <header class="page-header" role="banner">    
-      <img src="{{ site.baseurl }}/assets/main/logo.png" alt="banner-img"/>
+    <header class="particles-js" role="banner">    
+      <img src="{{ site.baseurl }}/assets/main/logo.png" alt="logo"/>
 
       <div class="button-content" name="buttons">
         <a href="{{ site.baseurl }}" class="btn">Home</a>
