--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -150,7 +150,7 @@ a {
 }
 
 
-.page-header {
+.particles-js {
   color: $header-heading-color;
   text-align: center;
   background-color: $header-bg-color;
@@ -167,16 +167,18 @@ a {
   @include small {
     padding: 2rem 1rem;
   }
+
+  img {
+    width: 50%;
+    height: 50%;
+  }
 }
 
 .button-content {
   position: relative;
 }
 
-.page-header img {
-  width: 100%;
-  height: 100%
-}
+
 
 .project-name {
   margin-top: 0;
