--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
       </script>
     {% endif %}
     <meta charset="UTF-8">
+    <script src="jquery-3.2.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="{{ site.baseurl }}/assets/js/particles.js"></script>
 
