--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -156,21 +156,21 @@ a {
   background-color: $header-bg-color;
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
 
-  @include large {
-    padding: 5rem 6rem;
-  }
+  // @include large {
+  //   padding: 5rem 6rem;
+  // }
 
-  @include medium {
-    padding: 3rem 4rem;
-  }
+  // @include medium {
+  //   padding: 3rem 4rem;
+  // }
 
-  @include small {
+  // @include small {
     padding: 2rem 1rem;
-  }
+  // }
 
   img {
-    width: 50%;
-    height: 50%;
+    width: 30%;
+    height: 30%;
   }
 }
 
