edit for particle js

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -149,7 +149,7 @@ a {
 }
 
 
-.particles-js {
+.page-header {
   color: $header-heading-color;
   text-align: center;
   background-color: $header-bg-color;
