edit for particle js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="{{ site.baseurl }}/assets/js/particles.js"></script>
 
-    <header class="page-header" id="page-header" role="banner">    
+    <div class="page-header" id="page-header" role="banner">    
       <img src="{{ site.baseurl }}/assets/main/logo.png" alt="logo"/>
 
       <div class="button-content" name="buttons">
@@ -35,7 +35,7 @@
         <a href="{{ site.baseurl }}/links" class="btn">Links</a>
       </div>
 
-    </header>
+    </div>
 
     <main id="content" class="main-content" role="main">
       {{ content }}
