edit for particle js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,16 +25,17 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="{{ site.baseurl }}/assets/js/particles.js"></script>
 
-    <div class="page-header" id="page-header" role="banner">    
-      <img src="{{ site.baseurl }}/assets/main/logo.png" alt="logo"/>
+    <div class="particle-js" id="particle-js" role="banner">   
+      <header class="page-header">
+        <img src="{{ site.baseurl }}/assets/main/logo.png" alt="logo"/>
 
-      <div class="button-content" name="buttons">
-        <a href="{{ site.baseurl }}" class="btn">Home</a>
-        <a href="{{ site.baseurl }}/archive" class="btn">Archive</a>
-        <a href="{{ site.baseurl }}/about" class="btn">About</a>
-        <a href="{{ site.baseurl }}/links" class="btn">Links</a>
-      </div>
-
+        <div class="button-content" name="buttons">
+          <a href="{{ site.baseurl }}" class="btn">Home</a>
+          <a href="{{ site.baseurl }}/archive" class="btn">Archive</a>
+          <a href="{{ site.baseurl }}/about" class="btn">About</a>
+          <a href="{{ site.baseurl }}/links" class="btn">Links</a>
+        </div>
+      </header> 
     </div>
 
     <main id="content" class="main-content" role="main">
