--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -148,29 +148,33 @@ a {
   }
 }
 
-
 .page-header {
   color: $header-heading-color;
   text-align: center;
-  background-color: $header-bg-color;
-  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+  // background-color: $header-bg-color;
+  // background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
 
-  // @include large {
-  //   padding: 5rem 6rem;
-  // }
+  @include large {
+    padding: 5rem 6rem;
+  }
 
-  // @include medium {
-  //   padding: 3rem 4rem;
-  // }
+  @include medium {
+    padding: 3rem 4rem;
+  }
 
-  // @include small {
+  @include small {
     padding: 2rem 1rem;
-  // }
+  }
 
   img {
-    width: 30%;
-    height: 30%;
+    width: 20%;
+    height: 20%;
   }
+}
+
+.particle-js {
+  background-color: $header-bg-color;
+  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
 }
 
 .button-content {
