--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,8 +4,8 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #FFEBF9   !default;
-$header-bg-color-secondary: #8F0064 !default;
+$header-bg-color: #3c3450   !default;
+$header-bg-color-secondary: #110e18 !default;
 
 // Chapter
 $chapter-color: #2e3892 !default;
