--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -174,13 +174,13 @@ a {
 
 .particle-js {
   background-color: $header-bg-color;
-  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+  background-image: linear-gradient($header-bg-color-secondary, $header-bg-color);
+  position: absolute;
 }
 
 .button-content {
   position: relative;
 }
-
 
 
 .project-name {
