--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -151,7 +151,6 @@ a {
 .page-header {
   color: $header-heading-color;
   text-align: center;
-  position: relative;
   // background-color: $header-bg-color;
   // background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
 
@@ -174,9 +173,15 @@ a {
 }
 
 .particle-js {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+
   background-color: $header-bg-color;
   background-image: linear-gradient($header-bg-color-secondary, $header-bg-color);
-  position: absolute;
 }
 
 .button-content {
