--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -173,12 +173,7 @@ a {
 }
 
 .particle-js {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 0;
+  object-fit: cover; 
 
   background-color: $header-bg-color;
   background-image: linear-gradient($header-bg-color-secondary, $header-bg-color);
