edit for particle js

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -173,7 +173,10 @@ a {
 }
 
 .particle-js {
-  position: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -100;
   object-fit: cover; 
 
   background-color: $header-bg-color;
