--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,8 +4,8 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #423c50   !default;
-$header-bg-color-secondary: #110e18 !default;
+$header-bg-color: #303E7A   !default;
+$header-bg-color-secondary: #000033 !default;
 
 // Chapter
 $chapter-color: #2e3892 !default;
