--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -14,7 +14,7 @@ $chapter-color-secondary: #969ee9 !default;
 // Text
 $section-headings-color: #680049 !default;
 $body-text-color: #606c71 !default;
-$body-link-color: #731eb8 !default;
+$body-link-color: #CA0189 !default;
 $blockquote-text-color: #819198 !default;
 
 // Code
