--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -174,8 +174,8 @@ a {
   top: 0;
   left: 0;
   z-index: -100;
-  height: 100%;
-  width: 100%;
+  // height: 100%;
+  // width: 100%;
 
   background-color: $header-bg-color;
   background-image: linear-gradient($header-bg-color-secondary, $header-bg-color);
