--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -172,7 +172,9 @@ a {
 .particle-js {
   position: absolute;
   top: 0;
+  bottom: 0;
   left: 0;
+  right: 0;
   z-index: -999;
   height: 100%;
   width: 100%;
