--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -1,7 +1,7 @@
 <div class="comic-strip">
     <div>
-        <input class="prev" type="submit">
-        <input class="next" type="submit">
+        <div class="prev">
+        <div class="next">
     </div>
     
     {% for image in site.static_files %}
@@ -14,8 +14,8 @@
     {% endfor %}
 
     <div>
-        <input class="prev" type="submit">
-        <input class="next" type="submit">
+        <div class="prev">
+        <div class="next">
     </div>
     
 </div>
