--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -1,7 +1,17 @@
 <div class="comic-strip">
-    <div>
-        <div class="prev">
-        <div class="next">
+
+    <div class="chapter-nav">
+        <button class="prev"></button>
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+            <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+            {% for chapter in site.archive %}
+                <li><a href="{{ site.baseurl }}{{ chapter.url }}" class="chapter-btn">{{ chapter.title }}</a></li>
+            {% endfor %}
+            </ul>
+          </div>
+        <button class="next"></button>
     </div>
     
     {% for image in site.static_files %}
@@ -13,9 +23,19 @@
     {% endif %}
     {% endfor %}
 
-    <div>
-        <div class="prev">
-        <div class="next">
+
+    <div class="chapter-nav">
+        <button class="prev"></button>
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+            <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+            {% for chapter in site.archive %}
+                <li><a href="{{ site.baseurl }}{{ chapter.url }}" class="chapter-btn">{{ chapter.title }}</a></li>
+            {% endfor %}
+            </ul>
+          </div>
+        <button class="next"></button>
     </div>
     
 </div>
