--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -3,7 +3,7 @@
     <div class="chapter-nav">
         <button class="prev"></button>
         <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Chapters
             <span class="caret"></span></button>
             <ul class="dropdown-menu">
             {% for chapter in site.archive %}
@@ -27,7 +27,7 @@
     <div class="chapter-nav">
         <button class="prev"></button>
         <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Chapters
             <span class="caret"></span></button>
             <ul class="dropdown-menu">
             {% for chapter in site.archive %}
