--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -489,5 +489,5 @@ a {
 
 .next:hover /* use Dot here */
 {   
-    background: url(main/next.png) no-repeat;
+    background: url(amain/next.png) no-repeat;
 }
