--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -2,15 +2,16 @@
 
     <div class="chapter-nav">
         <button class="prev"></button>
+
         <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Chapters
-            <span class="caret"></span></button>
-            <ul class="dropdown-menu">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown</a>
+            <div class="dropdown-menu">
             {% for chapter in site.archive %}
-                <li><a href="{{ site.baseurl }}{{ chapter.url }}" class="chapter-btn">{{ chapter.title }}</a></li>
+                <a href="{{ site.baseurl }}{{ chapter.url }}" class="chapter-btn">{{ chapter.title }}</a>
             {% endfor %}
-            </ul>
-          </div>
+            </div>
+        </div>
+       
         <button class="next"></button>
     </div>
     
@@ -26,15 +27,16 @@
 
     <div class="chapter-nav">
         <button class="prev"></button>
+
         <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Chapters
-            <span class="caret"></span></button>
-            <ul class="dropdown-menu">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown</a>
+            <div class="dropdown-menu">
             {% for chapter in site.archive %}
-                <li><a href="{{ site.baseurl }}{{ chapter.url }}" class="chapter-btn">{{ chapter.title }}</a></li>
+                <a href="{{ site.baseurl }}{{ chapter.url }}" class="chapter-btn">{{ chapter.title }}</a>
             {% endfor %}
-            </ul>
-          </div>
+            </div>
+        </div>
+        
         <button class="next"></button>
     </div>
     
