--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -4,11 +4,14 @@
         <button class="prev"></button>
 
         <div class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-            <div class="dropdown-menu">
-            {% for chapter in site.archive %}
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Chapters
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                {% for chapter in site.archive %}
                 <a href="{{ site.baseurl }}{{ chapter.url }}" class="chapter-btn">{{ chapter.title }}</a>
-            {% endfor %}
+                {% endfor %}
+              </div>
             </div>
         </div>
        
@@ -29,14 +32,17 @@
         <button class="prev"></button>
 
         <div class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-            <div class="dropdown-menu">
-            {% for chapter in site.archive %}
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Chapters
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                {% for chapter in site.archive %}
                 <a href="{{ site.baseurl }}{{ chapter.url }}" class="chapter-btn">{{ chapter.title }}</a>
-            {% endfor %}
+                {% endfor %}
+              </div>
             </div>
         </div>
-        
+
         <button class="next"></button>
     </div>
     
