--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -106,44 +106,23 @@ a {
 }
 
 .chapter-btn {
+  color: #680049;
+  border: 2px solid #680049;
+  border-radius: 0px;
+  padding: 18px 36px;
   display: inline-block;
-  margin-bottom: 1rem;
-  color: $chapter-color;
-  border-color: $chapter-color;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 0.3rem;
-  transition: color 0.2s, background-color 0.2s, border-color 0.2s;
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 14px;
+  letter-spacing: 1px;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 #680049;
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
 
   &:hover {
-    text-decoration: none;
-    background-color: rgba(255, 255, 255, 0.3);
-    border-color: $chapter-color;
-  }
-
-  + .btn {
-    margin-left: 1rem;
-  }
-
-  @include large {
-    padding: 0.75rem 1rem;
-  }
-
-  @include medium {
-    padding: 0.6rem 0.9rem;
-    font-size: 0.9rem;
-  }
-
-  @include small {
-    display: block;
-    width: 100%;
-    padding: 0.75rem;
-    font-size: 0.9rem;
-
-    + .btn {
-      margin-top: 1rem;
-      margin-left: 0;
-    }
+    color: #FFF;
+    box-shadow: inset 0 0 0 50px #680049;
   }
 }
 
@@ -473,6 +452,7 @@ a {
 
   display: block;
   max-height:95px;
+  max-width:95px;
   width: auto;
   height: auto;
 
@@ -488,6 +468,7 @@ a {
 
   display: block;
   max-height:95px;
+  max-width:95px;
   width: auto;
   height: auto;
 
