--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -112,6 +112,9 @@ a {
   border-radius: 0px;
   display: inline-block;
 
+  -webkit-padding-start: 0;
+  padding: 18px 36px;
+
   cursor: pointer;
   box-shadow: inset 0 0 0 0 #680049;
   -webkit-transition: ease-out 0.4s;
@@ -121,6 +124,11 @@ a {
   &:hover {
     color: #FFF;
     box-shadow: inset 0 0 0 50px #680049;
+    text-decoration: none;
+  }
+
+  &:visited {
+    color: #613754;
   }
 }
 
@@ -447,6 +455,9 @@ a {
   background-size: cover;
   height: 60px;
   width: 60px;
+  border: none;
+
+  margin-right: 40px;
   cursor: pointer;
 
   transition: transform 0.5s;
@@ -462,6 +473,9 @@ a {
   background-size: cover;
   height: 60px;
   width: 60px;
+  border: none;
+
+  margin-left: 40px;
   cursor: pointer;
 
   transition: transform 0.5s;
