--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -446,9 +446,11 @@ a {
   text-align: center;
 }
 
-.prev
+#prev
 {
   background: url(../main/previous.png) no-repeat;
+  display: block;
+  margin: 0 auto;
   background-size: cover;
   height: 60px;
   width: 60px;
@@ -465,9 +467,11 @@ a {
   }
 }
 
-.next
+#next
 {
   background: url(../main/next.png) no-repeat;  
+  display: block;
+  margin: 0 auto;
   background-size: cover;
   height: 60px;
   width: 60px;
