--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -26,6 +26,7 @@
 }
 
 body {
+  background-color: $bg-color;
   padding: 0;
   margin: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -485,3 +486,68 @@ a {
       border: none;
   }
 }
+
+.dropdown-menu 
+{
+  -webkit-transition: all .5s ease-out;
+  transition: all .5s ease-out;
+  transform: rotateX(90deg);
+  transform-origin: top;
+  opacity: 0;
+  display: block;
+  width: 100%;
+  border: none;
+}
+
+.open .dropdown-menu 
+{
+  opacity: 1;
+  transform: rotateX(0deg);
+  transform-origin: top;
+  width: 100%;
+  border: none;
+}
+
+#top-button 
+{
+  display: inline-block;
+  background-color: #FF9800;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 4px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition: background-color .3s, 
+    opacity .5s, visibility .5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+}
+
+#top-button::after 
+{
+  content: "\f077";
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff;
+}
+
+#top-button:hover 
+{
+  cursor: pointer;
+  background-color: #333;
+}
+
+#top-button:active 
+{
+  background-color: #555;
+}
+
+#top-button.show 
+{
+  opacity: 1;
+  visibility: visible;
+}
+
